--- a/voicenotion_visual_identity.tex
+++ b/voicenotion_visual_identity.tex
@@ -1,189 +1,149 @@
-\chapter{IDENTITÉ VISUELLE}
+\section{VoiceNotion – Brand Identity Snapshot}
 
-\section{Introduction}
-
-Ce chapitre présente l'identité visuelle de VoiceNotion, un élément clé pour créer une expérience utilisateur cohérente et mémorable. L'identité visuelle traduit la personnalité de la marque en éléments graphiques concrets, allant des couleurs et des polices aux icônes et à l'imagerie. Une identité visuelle forte et bien définie est essentielle pour différencier VoiceNotion de ses concurrents, renforcer la reconnaissance de la marque et créer un lien émotionnel avec les utilisateurs.
-
-L'objectif de cette identité visuelle est de refléter les valeurs fondamentales de VoiceNotion : la clarté, le calme, le soutien et une touche de joie. Chaque élément a été choisi pour contribuer à une expérience utilisateur fluide, intuitive et agréable, en particulier dans le contexte d'une application axée sur la voix.
-
-\section{Instantané de l'Identité de Marque VoiceNotion}
-
-\subsection{Essence de la Marque}
-
+\subsection{Brand Essence}
 \begin{quote}
-    “Un compagnon de productivité axé sur la voix qui apporte calme, clarté et une étincelle de joie à la capture et à l'organisation de vos pensées.”
+    “A voice-first productivity companion that brings calm, clarity, and a spark of joy to capturing and organizing your thoughts.”
 \end{quote}
 
-\subsection{Personnalité de la Marque (4 Traits)}
+\subsection{Core Brand Personality (4 Traits)}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Trait} & \textbf{Description} \\
+\hline
+Calm & Minimal, distraction-free, focused like Notion. \\
+\hline
+Clear & Straightforward and precise—no clutter, no fluff. \\
+\hline
+Supportive & Friendly, helpful, and empowering—always welcoming. \\
+\hline
+Lightly Joyful & Adds subtle positivity and delight—never too serious. \\
+\hline
+\end{tabular}
 
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|p{4cm}|p{9cm}|}
-        \hline
-        \textbf{Trait} & \textbf{Description} \\
-        \hline
-        \textbf{Calme} & Minimal, sans distraction, concentré comme Notion. \\
-        \hline
-        \textbf{Clair} & Direct et précis—sans encombrement, sans superflu. \\
-        \hline
-        \textbf{Soutenant} & Amical, serviable et responsabilisant—toujours accueillant. \\
-        \hline
-        \textbf{Légèrement Joyeux} & Ajoute une positivité et un plaisir subtils—jamais trop sérieux. \\
-        \hline
-    \end{tabular}
-    \caption{Personnalité de la marque VoiceNotion}
-    \label{tab:brand_personality}
-\end{table}
+\subsection{Positioning Pillars}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Pillar} & \textbf{VoiceNotion Delivers} \\
+\hline
+100\% Voice-First & Speak to write, format, and organize—hands-free productivity \\
+\hline
+AI-Powered Clarity & Smart transcription, summaries, and auto-tagging \\
+\hline
+Calm \& Focused UX & Thoughtful, minimal interface to reduce friction \\
+\hline
+Inclusive Design & Accessibility-first, multilingual, voice-only navigation \\
+\hline
+\end{tabular}
 
-\subsection{Piliers de Positionnement}
+\subsection{Key Differentiators}
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{Feature} & \textbf{Others} & \textbf{VoiceNotion} \\
+\hline
+Fully voice-operated & \ding{55} & \ding{51} \\
+\hline
+No typing required & \ding{55} & \ding{51} \\
+\hline
+AI summaries + tagging & \ding{51} & \ding{51} \\
+\hline
+Voice-controlled workspace & \ding{55} & \ding{51} \\
+\hline
+Accessibility-first UX & \ding{55} & \ding{51} \\
+\hline
+\end{tabular}
 
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|p{4cm}|p{9cm}|}
-        \hline
-        \textbf{Pilier} & \textbf{Ce que VoiceNotion Apporte} \\
-        \hline
-        \textbf{100\% Axé sur la Voix} & Parlez pour écrire, formater et organiser—productivité mains libres. \\
-        \hline
-        \textbf{Clarté Alimentée par l'IA} & Transcription intelligente, résumés et étiquetage automatique. \\
-        \hline
-        \textbf{UX Calme et Concentrée} & Interface réfléchie et minimale pour réduire les frictions. \\
-        \hline
-        \textbf{Conception Inclusive} & Accessibilité d'abord, multilingue, navigation uniquement par la voix. \\
-        \hline
-    \end{tabular}
-    \caption{Piliers de positionnement de VoiceNotion}
-    \label{tab:positioning_pillars}
-\end{table}
-
-\subsection{Principaux Différenciateurs}
-
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|p{5cm}|c|c|}
-        \hline
-        \textbf{Fonctionnalité} & \textbf{Autres} & \textbf{VoiceNotion} \\
-        \hline
-        Entièrement commandé par la voix & \textcolor{red}{Non} & \textcolor{green!60!black}{Oui} \\
-        \hline
-        Aucune saisie requise & \textcolor{red}{Non} & \textcolor{green!60!black}{Oui} \\
-        \hline
-        Résumés IA + étiquetage & \textcolor{green!60!black}{Oui} & \textcolor{green!60!black}{Oui} \\
-        \hline
-        Espace de travail contrôlé par la voix & \textcolor{red}{Non} & \textcolor{green!60!black}{Oui} \\
-        \hline
-        UX axée sur l'accessibilité & \textcolor{red}{Non} & \textcolor{green!60!black}{Oui} \\
-        \hline
-    \end{tabular}
-    \caption{Principaux différenciateurs de VoiceNotion}
-    \label{tab:key_differentiators}
-\end{table}
-
-\subsection{Principes de la Voix de la Marque}
-
+\subsection{Brand Voice Principles}
 \begin{itemize}
-    \item \textbf{Calme et Clair :} “Commencez à parler et je m'occupe du reste.”
-    \item \textbf{Soutenant et Positif :} “Compris ! Note enregistrée.”
-    \item \textbf{Simple, sans Jargon :} “Votre voix. Vos notes. Sans clavier.”
-    \item \textbf{Pas de Réponse Vocale :} Feedback textuel uniquement. UX silencieuse.
+    \item \textbf{Calm \& Clear}: “Start speaking and I’ll take it from here.”
+    \item \textbf{Supportive \& Positive}: “Got it! Note saved.”
+    \item \textbf{Simple, No Jargon}: “Your voice. Your notes. No keyboard.”
+    \item \textbf{No Talking Back}: Text-based feedback only. Quiet UX.
 \end{itemize}
 
-\section{Système d'Identité Visuelle – VoiceNotion}
+\section{Visual Identity System – VoiceNotion}
 
-\subsection{Suggestion de Couleur d'Accentuation}
-
-\subsubsection{Indigo Doux (\texttt{\#5C6AC4})}
-
+\subsection{Accent Color Suggestion}
+\subsubsection{Soft Indigo (\#5C6AC4)}
 \begin{itemize}
-    \item \textbf{Pourquoi ?} L'indigo a une énergie calme et réfléchie, mais cette variante douce ajoute une sensation \textbf{moderne, concentrée, mais légèrement vibrante}.
-    \item C'est professionnel \textbf{sans être trop corporatif}, et joyeux \textbf{sans être enfantin}.
-    \item Fonctionne aussi magnifiquement avec le mode sombre ET le mode clair.
+    \item \textbf{Why?}: Indigo has a calm, thoughtful energy, but this soft variant adds a \textbf{modern, focused, yet gently vibrant} feel.
+    \item It’s professional \textbf{without being too corporate}, and joyful \textbf{without being childish}.
+    \item Also works beautifully with dark mode AND light mode.
 \end{itemize}
 
-\subsubsection{Alternatives (dans la même ambiance)}
-
+\subsubsection{Alternatives (in same vibe):}
 \begin{itemize}
-    \item \textbf{Bleu Ardoise} \texttt{\#6A7FDB} – plus technique et cool
-    \item \textbf{Orchidée Discrète} \texttt{\#A88FBD} – ajoute une joie et une unicité subtiles
-    \item \textbf{Menthe Fraîche} \texttt{\#9EEBCF} – frais, accessible, inspiré par la voix
+    \item \textbf{Slate Blue} \#6A7FDB – more techy \& cool
+    \item \textbf{Muted Orchid} \#A88FBD – adds subtle joy + uniqueness
+    \item \textbf{Cool Mint} \#9EEBCF – fresh, accessible, voice-inspired
 \end{itemize}
 
-\subsection{Suggestions de Polices}
+% Placeholder for Color Palette Image
+% \begin{figure}[h!]
+%     \centering
+%     \includegraphics[width=0.8\textwidth]{assets/docs/colors/color_palette.png}
+%     \caption{VoiceNotion Color Palette}
+%     \label{fig:color_palette}
+% \end{figure}
 
-Nous voulons quelque chose de propre, moderne et humain — tout comme le ton de notre marque.
+\subsection{Font Suggestions}
+You want something clean, modern, and human — just like your brand tone.
+\begin{tabular}{|l|l|l|}
+\hline
+\textbf{Font} & \textbf{Style} & \textbf{Why It Fits} \\
+\hline
+\textbf{Inter} & Sans-serif, modern & Designed for interfaces. Clean, readable, calm vibe. \\
+\hline
+\textbf{General Sans} & Friendly sans-serif & Slightly rounded for a friendly, clear feel. \\
+\hline
+\textbf{Outfit} & Geometric, simple & Soft and techy. Great for voice interfaces. \\
+\hline
+\textbf{Satoshi} & Neutral + modern & Balanced between formal and casual. Great for clarity. \\
+\hline
+\end{tabular}
 
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|p{3cm}|p{3cm}|p{7cm}|}
-        \hline
-        \textbf{Police} & \textbf{Style} & \textbf{Pourquoi ça correspond} \\
-        \hline
-        \textbf{Inter} & Sans-serif, moderne & Conçu pour les interfaces. Propre, lisible, ambiance calme. \\
-        \hline
-        \textbf{General Sans} & Sans-serif amical & Légèrement arrondi pour une sensation amicale et claire. \\
-        \hline
-        \textbf{Outfit} & Géométrique, simple & Doux et technique. Idéal pour les interfaces vocales. \\
-        \hline
-        \textbf{Satoshi} & Neutre + moderne & Équilibré entre formel et décontracté. Idéal pour la clarté. \\
-        \hline
-    \end{tabular}
-    \caption{Suggestions de polices pour VoiceNotion}
-    \label{tab:font_suggestions}
-\end{table}
+\textit{Avoid overly playful fonts like Comic Neue or too serious fonts like Times New Roman.}
 
-\textit{Évitez les polices trop ludiques comme Comic Neue ou trop sérieuses comme Times New Roman.}
+\subsection{Visual Elements and Style}
 
-\subsection{Éléments Visuels et Style}
-
-\subsubsection{Iconographie}
-
+\subsubsection{Iconography}
 \begin{itemize}
-    \item Utilisez des \textbf{icônes fines et arrondies} (par ex., Lucide, Feather Icons)
-    \item Évitez les contours trop détaillés ou durs
+    \item Use \textbf{thin-line, rounded icons} (e.g., Lucide, Feather Icons)
+    \item Avoid overly detailed or harsh outlines
 \end{itemize}
 
-\subsubsection{Formes}
-
+\subsubsection{Shapes}
 \begin{itemize}
-    \item Coins arrondis (8px–16px) pour les boutons, cartes, entrées
-    \item Formes fluides pour suggérer le flux de la voix (comme des ondes audio, des courbes douces)
+    \item Rounded corners (8px–16px) for buttons, cards, inputs
+    \item Fluid shapes to suggest voice flow (like audio waves, soft curves)
 \end{itemize}
 
-\subsubsection{Imagerie et Illustrations}
-
+\subsubsection{Imagery \& Illustrations}
 \begin{itemize}
-    \item Utilisez des \textbf{ondes vocales abstraites}, des \textbf{lignes de flux} et des \textbf{notes flottantes}
-    \item Gardez l'imagerie légère et propre (pas d'images de stock trop littérales ou corporatives)
+    \item Use \textbf{abstract voice waveforms}, \textbf{flow lines}, and \textbf{floating notes}
+    \item Keep imagery light and clean (no overly literal or corporate stock)
 \end{itemize}
 
-\subsubsection{Thèmes}
-
+\subsubsection{Themes}
 \begin{itemize}
-    \item \textbf{Mode Clair :} Fond blanc cassé doux (\texttt{\#FAFAFC})
-    \item \textbf{Mode Sombre :} Indigo profond/gris-bleu (\texttt{\#1E1E2F}) avec votre couleur d'accentuation brillant subtilement
+    \item \textbf{Light Mode}: Soft off-white background (\#FAFAFC)
+    \item \textbf{Dark Mode}: Deep indigo/blue-gray (\#1E1E2F) with your accent color glowing subtly
 \end{itemize}
 
-\subsection{Résumé du Système Visuel}
-
-\begin{table}[H]
-    \centering
-    \begin{tabular}{|p{4cm}|p{9cm}|}
-        \hline
-        \textbf{Élément} & \textbf{Direction de Conception} \\
-        \hline
-        \textbf{Couleur d'Accentuation} & Indigo Doux \texttt{\#5C6AC4} \\
-        \hline
-        \textbf{Typographie} & Inter / General Sans / Outfit \\
-        \hline
-        \textbf{Style UI} & Minimal, arrondi, légèrement ludique \\
-        \hline
-        \textbf{Style d'Icône} & Basé sur des lignes, coins ronds, poids constant \\
-        \hline
-        \textbf{Arrière-plans} & Clair : \texttt{\#FAFAFC} / Sombre : \texttt{\#1E1E2F} \\
-        \hline
-        \textbf{Ambiance} & Calme, centré sur la voix, moderne, légèrement joyeux \\
-        \hline
-    \end{tabular}
-    \caption{Résumé du système visuel de VoiceNotion}
-    \label{tab:visual_system_summary}
-\end{table}
+\subsection{Summary Visual System}
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Element} & \textbf{Design Direction} \\
+\hline
+\textbf{Accent Color} & Soft Indigo \#5C6AC4 \\
+\hline
+\textbf{Typography} & Inter / General Sans / Outfit \\
+\hline
+\textbf{UI Style} & Minimal, rounded, lightly playful \\
+\hline
+\textbf{Icon Style} & Line-based, round corners, consistent weight \\
+\hline
+\textbf{Backgrounds} & Light: \#FAFAFC / Dark: \#1E1E2F \\
+\hline
+\textbf{Mood} & Calm, voice-centric, modern, slightly joyful \\
+\hline
+\end{tabular}
