--- a/voicenotion_etude_prealable.tex
+++ b/voicenotion_etude_prealable.tex
@@ -99,6 +99,12 @@ Le développement de VoiceNotion vise à atteindre plusieurs objectifs clés:
 
 \section{Avantages du projet}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{assets/docs/golobal-diagrams/supabase-feaature.png}
+    \caption{Architecture des fonctionnalités principales de VoiceNotion grâce à Supabase. Cette vue globale illustre l'intégration des services backend, la gestion des données et la sécurité, offrant une base robuste à l'application.}
+\end{figure}
+
 VoiceNotion offre plusieurs avantages distincts par rapport aux solutions existantes sur le marché:
 
 \subsection{Efficacité accrue}
