--- a/voicenotion_template.tex
+++ b/voicenotion_template.tex
@@ -31,7 +31,10 @@
 % \usepackage{tocbibind} % For adding LoF, LoT to ToC
 \usepackage{tocloft} % For customizing ToC, LoF, LoT
 
-% Page geometry
+\usepackage{graphicx}
+
+\usepackage{subcaption}
+
 \geometry{a4paper, margin=2.5cm}
 
 % Define VoiceNotion colors
@@ -260,7 +263,8 @@
 \chapter{IMPLEMENTATION ET DEVELOPPEMENT}
 \input{voicenotion_implementation}
 
-% Chapter 4: Identité Visuelle
+\chapter{IDENTITE VISUELLE}
+\input{voicenotion_visual_identity}
 
 % End of document
 \end{document} 
