Update planification calendar dates and resource references

--- a/voicenotion_solution.tex
+++ b/voicenotion_solution.tex
@@ -11,15 +11,6 @@ VoiceNotion est une application multiplateforme (web et mobile) dédiée à la p
 
 Après cette présentation générale, le diagramme de cas d’utilisation principal ci-dessous illustre les interactions majeures entre l’utilisateur et l’application :
 
-% --- Placeholder: Use case diagram ---
-\begin{figure}[H]
-    \centering
-    %\includegraphics[width=0.7\textwidth]{assets/docs/use-case-diagram.png}
-    \fbox{\parbox{0.6\textwidth}{\centering Placeholder pour le diagramme de cas d’utilisation}}
-    \caption{Diagramme de cas d’utilisation principal}
-    \label{fig:use-case}
-\end{figure}
-
 \section{Fonctionnalités principales}
 \begin{itemize}
     \item \textbf{Prise de notes et édition par la voix :} Créez, structurez et modifiez vos notes simplement en parlant.
@@ -32,25 +23,14 @@ Après cette présentation générale, le diagramme de cas d’utilisation princ
 
 Pour illustrer l’expérience utilisateur, la maquette suivante donne un aperçu de l’interface principale de VoiceNotion :
 
-% --- Placeholder: UI mockup ---
-\begin{figure}[H]
-    \centering
-    %\includegraphics[width=0.6\textwidth]{assets/docs/ui-mockup.png}
-    \fbox{\parbox{0.5\textwidth}{\centering Placeholder pour la maquette d’interface utilisateur}}
-    \caption{Maquette de l’interface utilisateur de VoiceNotion}
-    \label{fig:ui-mockup}
-\end{figure}
-
 \section{Architecture technique (aperçu)}
 VoiceNotion repose sur une architecture cloud moderne, combinant une interface web (Next.js/React), une application mobile (React Native/Expo), et un backend sécurisé (Supabase, PostgreSQL). L’intégration de l’API Gemini permet une transcription vocale précise et contextuelle.
 
 Pour conclure cette section, le schéma ci-dessous présente une vue d’ensemble de l’architecture technique de la solution :
 
-% --- Placeholder: Global architecture diagram ---
 \begin{figure}[H]
     \centering
-    %\includegraphics[width=0.8\textwidth]{assets/docs/global-architecture.png}
-    \fbox{\parbox{0.7\textwidth}{\centering Placeholder pour le schéma d’architecture globale}}
+    \includegraphics[width=0.8\textwidth]{assets/docs/global_architecture.png}
     \caption{Schéma d’architecture globale de VoiceNotion}
     \label{fig:global-architecture}
 \end{figure}
