--- a/voicenotion_implementation.tex
+++ b/voicenotion_implementation.tex
@@ -29,9 +29,9 @@ L'architecture de VoiceNotion est construite autour d'une approche multi-platefo
 
 \subsection{Composants principaux}
 \begin{itemize}
-    \item \textbf{Application Web}: Développée avec Next.js et React, offrant une interface responsive et optimisée pour les navigateurs desktop et mobiles.
-    \item \textbf{Application Mobile}: Construite avec React Native et Expo, permettant un déploiement natif sur iOS et Android.
-    \item \textbf{Backend}: Utilisant Supabase comme solution Backend-as-a-Service (BaaS) pour l'authentification, la base de données, et le stockage.
+    \item \textbf{Application Web}: Développée avec Next.js\resref{res:nextjs} et React, offrant une interface responsive et optimisée pour les navigateurs desktop et mobiles.
+    \item \textbf{Application Mobile}: Construite avec React Native\resref{res:reactnative} et Expo\resref{res:expo}, permettant un déploiement natif sur iOS et Android.
+    \item \textbf{Backend}: Utilisant Supabase\resref{res:supabase} comme solution Backend-as-a-Service (BaaS) pour l'authentification, la base de données, et le stockage.
     \item \textbf{API Gemini}: Intégration de l'API Gemini de Google pour la reconnaissance vocale et le traitement des commandes.
 \end{itemize}
 
@@ -39,9 +39,9 @@ L'architecture de VoiceNotion est construite autour d'une approche multi-platefo
 Le flux de données dans VoiceNotion suit un modèle client-serveur avec synchronisation en temps réel:
 \begin{enumerate}
     \item L'utilisateur interagit avec l'application (web ou mobile)
-    \item Les requêtes sont envoyées au backend Supabase via des API sécurisées
-    \item Les données sont stockées dans une base de données PostgreSQL
-    \item Les mises à jour sont synchronisées en temps réel entre les appareils grâce aux abonnements Supabase
+    \item Les requêtes sont envoyées au backend Supabase\resref{res:supabase} via des API sécurisées
+    \item Les données sont stockées dans une base de données PostgreSQL\resref{res:postgresql}
+    \item Les mises à jour sont synchronisées en temps réel entre les appareils grâce aux abonnements Supabase\resref{res:supabase}
 \end{enumerate}
 
 \section{Environnement de developpement}
@@ -61,15 +61,15 @@ Le developpement de VoiceNotion a ete realise sur les equipements suivants:
     \centering
     \includegraphics[width=0.25\textwidth]{assets/docs/vscode.png}
 \end{wrapfigure}
-Visual Studio Code est un editeur de code source leger mais puissant qui s'execute sur votre bureau et est disponible pour Windows, macOS et Linux. Il est fourni avec un support integre pour JavaScript, TypeScript et Node.js et dispose d'un riche ecosysteme d'extensions pour d'autres langages et environnements de developpement.
+Visual Studio Code est un editeur de code source leger mais puissant qui s'execute sur votre bureau et est disponible pour Windows, macOS et Linux. Il est fourni avec un support integre pour JavaScript, TypeScript\resref{res:typescript} et Node.js et dispose d'un riche ecosysteme d'extensions pour d'autres langages et environnements de developpement.
 
 Visual Studio Code a ete notre IDE principal pour le developpement de VoiceNotion. Nous avons utilise plusieurs extensions pour ameliorer notre productivite:
 
 \begin{itemize}
-    \item ESLint: Pour la verification du code JavaScript/TypeScript
-    \item Prettier: Pour le formatage automatique du code
+    \item ESLint\resref{res:eslint}: Pour la verification du code JavaScript/TypeScript\resref{res:typescript}
+    \item Prettier\resref{res:prettier}: Pour le formatage automatique du code
     \item React Developer Tools: Pour le debogage des composants React
-    \item Tailwind CSS IntelliSense: Pour l'autocompletion des classes Tailwind
+    \item Tailwind CSS IntelliSense\resref{res:tailwind}: Pour l'autocompletion des classes Tailwind
     \item GitLens: Pour une meilleure integration avec Git
 \end{itemize}
 
@@ -86,46 +86,46 @@ Pour VoiceNotion, nous avons utilise GitHub pour:
 \begin{itemize}
     \item Gestion du code source avec branches pour chaque fonctionnalite
     \item Organisation du travail d'equipe via les issues et les projets
-    \item Integration continue avec GitHub Actions
+    \item Integration continue avec GitHub Actions\resref{res:githubactions}
     \item Revue de code via les pull requests
     \item Documentation du projet dans le wiki et le README
 \end{itemize}
 
-\subsubsection{TypeScript}
+\subsubsection{TypeScript\resref{res:typescript}}
 \begin{wrapfigure}{r}{0.3\textwidth}
     \centering
     \includegraphics[width=0.25\textwidth]{assets/docs/typescript.png}
 \end{wrapfigure}
-TypeScript est un sur-ensemble de JavaScript developpe par Microsoft qui ajoute des types statiques optionnels au langage. Il est concu pour le developpement d'applications a grande echelle et se compile en JavaScript standard.
+TypeScript\resref{res:typescript} est un sur-ensemble de JavaScript developpe par Microsoft qui ajoute des types statiques optionnels au langage. Il est concu pour le developpement d'applications a grande echelle et se compile en JavaScript standard.
 
-Les avantages de TypeScript que nous avons exploites dans VoiceNotion:
+Les avantages de TypeScript\resref{res:typescript} que nous avons exploites dans VoiceNotion:
 \begin{itemize}
     \item Langage type qui permet de detecter les erreurs lors de la compilation
     \item Compilation en differentes versions ECMAScript a partir de la version 3
     \item De nombreux outils disponibles et une integration parfaite avec VS Code
     \item Un langage oriente objet avec l'introduction du typage, de l'heritage et des notions de public et private
-    \item La transition du JavaScript vers TypeScript peut se faire progressivement
+    \item La transition du JavaScript vers TypeScript\resref{res:typescript} peut se faire progressivement
     \item La transition inverse tres simple grace a la transpilation en ECMAScript
 \end{itemize}
 
-TypeScript nous a permis de developper un code plus robuste et plus maintenable, particulierement important pour une application comme VoiceNotion qui necessite une gestion complexe des interactions utilisateur et des donnees.
+TypeScript\resref{res:typescript} nous a permis de developper un code plus robuste et plus maintenable, particulierement important pour une application comme VoiceNotion qui necessite une gestion complexe des interactions utilisateur et des donnees.
 
 \subsubsection{Zod}
 \begin{wrapfigure}{r}{0.3\textwidth}
     \centering
     \includegraphics[width=0.25\textwidth]{assets/docs/logo_zod.png}
 \end{wrapfigure}
-Zod est une bibliotheque de validation de schemas axee sur TypeScript. Elle offre une API puissante et expressive pour definir et valider des schemas de donnees. 
+Zod est une bibliotheque de validation de schemas axee sur TypeScript\resref{res:typescript}. Elle offre une API puissante et expressive pour definir et valider des schemas de donnees. 
 
 Avec Zod, nous pouvons facilement definir des regles de validation complexes pour differents types de donnees tels que les chaines de caracteres, les nombres, les tableaux, les objets, et bien d'autres. Il prend en charge des fonctionnalites avancees telles que la validation conditionnelle, les messages d'erreur personnalises et la composition de schemas.
 
-Zod favorise le typage fort et l'inference de types, ce qui en fait un choix ideal pour les projets TypeScript. Il s'integre egalement parfaitement avec des frameworks et des bibliotheques populaires comme React et Express. 
+Zod favorise le typage fort et l'inference de types, ce qui en fait un choix ideal pour les projets TypeScript\resref{res:typescript}. Il s'integre egalement parfaitement avec des frameworks et des bibliotheques populaires comme React et Express. 
 
 Dans VoiceNotion, nous utilisons Zod pour:
 \begin{itemize}
     \item Valider les donnees des formulaires utilisateur
     \item Verifier l'integrite des donnees provenant de l'API
-    \item Generer des types TypeScript a partir des schemas de validation
+    \item Generer des types TypeScript\resref{res:typescript} a partir des schemas de validation
     \item Assurer la coherence des donnees entre le frontend et le backend
 \end{itemize}
 
@@ -136,11 +136,11 @@ Dans VoiceNotion, nous utilisons Zod pour:
     \vspace{0.5cm}
     \includegraphics[width=0.25\textwidth]{assets/docs/cypress.png}
 \end{wrapfigure}
-Pour assurer la qualite et la fiabilite de notre application, nous avons mis en place une strategie de tests complete avec Jest et Cypress.
+Pour assurer la qualite et la fiabilite de notre application, nous avons mis en place une strategie de tests complete avec Jest\resref{res:jest} et Cypress\resref{res:cypress}.
 
-\textbf{Jest} est un framework de test JavaScript concu pour assurer la correction de n'importe quel code JavaScript. Jest est complet et facile a configurer, et nous l'avons utilise pour les tests unitaires et d'integration.
+\textbf{Jest\resref{res:jest}} est un framework de test JavaScript concu pour assurer la correction de n'importe quel code JavaScript. Jest\resref{res:jest} est complet et facile a configurer, et nous l'avons utilise pour les tests unitaires et d'integration.
 
-\textbf{Cypress} est un framework de test end-to-end qui nous permet de tester notre application comme le ferait un utilisateur reel. Il offre une experience de test fiable, rapide et facile a comprendre.
+\textbf{Cypress\resref{res:cypress}} est un framework de test end-to-end qui nous permet de tester notre application comme le ferait un utilisateur reel. Il offre une experience de test fiable, rapide et facile a comprendre.
 
 Notre approche de test comprend:
 \begin{itemize}
@@ -169,15 +169,6 @@ Figma est un outil de conception d'interface utilisateur base sur le cloud qui p
 
 L'interface intuitive de Figma et ses fonctionnalites avancees ont grandement facilite le processus de conception, permettant a notre equipe de travailler efficacement meme a distance.
 
-% Explication brève avant chaque figure
-\noindent
-\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.9\textwidth]{assets/docs/figma_design_system.png}
-\caption{Systeme de design VoiceNotion dans Figma}
-\label{fig:figma-design}
-\end{figure}
 
 \subsection{Adobe Illustrator}
 \begin{wrapfigure}{r}{0.3\textwidth}
@@ -225,24 +216,24 @@ Avec Photoshop, nous avons effectue des retouches precises, ajuste la luminosite
 
 \section{Backend et services cloud}
 
-\subsection{Supabase}
+\subsection{Supabase\resref{res:supabase}}
 \begin{wrapfigure}{r}{0.3\textwidth}
     \centering
     \includegraphics[width=0.25\textwidth]{assets/docs/logo_supabase.png}
 \end{wrapfigure}
-Supabase est une solution Backend-as-a-Service (BaaS) open-source qui offre une alternative a Firebase. Cette plateforme nous offre:
+Supabase\resref{res:supabase} est une solution Backend-as-a-Service (BaaS) open-source qui offre une alternative a Firebase. Cette plateforme nous offre:
 
 \begin{itemize}
-    \item Une base de donnees PostgreSQL performante et evolutive
+    \item Une base de donnees PostgreSQL\resref{res:postgresql} performante et evolutive
     \item Un systeme d'authentification securise avec plusieurs methodes de connexion
     \item Des API RESTful et GraphQL generees automatiquement
     \item Des fonctionnalites de temps reel pour la synchronisation des donnees
     \item Un stockage de fichiers integre
 \end{itemize}
 
-Nous avons choisi Supabase pour sa flexibilite, sa scalabilite et sa compatibilite avec PostgreSQL, ce qui nous permet de beneficier d'une base de donnees relationnelle complete sans avoir a gerer l'infrastructure sous-jacente. L'authentification integree et les fonctionnalites en temps reel ont egalement considerablement accelere notre developpement.
+Nous avons choisi Supabase\resref{res:supabase} pour sa flexibilite, sa scalabilite et sa compatibilite avec PostgreSQL\resref{res:postgresql}, ce qui nous permet de beneficier d'une base de donnees relationnelle complete sans avoir a gerer l'infrastructure sous-jacente. L'authentification integree et les fonctionnalites en temps reel ont egalement considerablement accelere notre developpement.
 
-Avec Supabase, nous avons pu implementer rapidement des fonctionnalites essentielles comme la synchronisation des notes entre appareils, la gestion des utilisateurs et le stockage des fichiers multimedia associes aux notes.
+Avec Supabase\resref{res:supabase}, nous avons pu implementer rapidement des fonctionnalites essentielles comme la synchronisation des notes entre appareils, la gestion des utilisateurs et le stockage des fichiers multimedia associes aux notes.
 
 % Explication brève avant chaque figure
 \noindent
@@ -250,11 +241,11 @@ Avec Supabase, nous avons pu implementer rapidement des fonctionnalites essentie
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.8\textwidth]{assets/docs/supabase_dashboard.png}
-\caption{Dashboard Supabase pour VoiceNotion}
+\caption{Dashboard Supabase\resref{res:supabase} pour VoiceNotion}
 \label{fig:supabase-dashboard}
 \end{figure}
 
-\begin{codebox}{Configuration Supabase}
+\begin{codebox}{Configuration Supabase\resref{res:supabase}}
 \begin{lstlisting}
 // lib/supabase.ts
 import { createClient } from '@supabase/supabase-js';
@@ -263,21 +254,21 @@ import { createClient } from '@supabase/supabase-js';
 const supabaseUrl = process.env.NEXT_PUBLIC_SUPABASE_URL!;
 const supabaseAnonKey = process.env.NEXT_PUBLIC_SUPABASE_ANON_KEY!;
 
-// Creation et export du client Supabase
+// Creation et export du client Supabase\resref{res:supabase}
 export const supabase = createClient(supabaseUrl, supabaseAnonKey);
 \end{lstlisting}
 \end{codebox}
 
-\subsection{Prisma}
+\subsection{Prisma\resref{res:prisma}}
 \begin{wrapfigure}{r}{0.3\textwidth}
     \centering
-    \textit{Logo Prisma manquant}
+    \textit{Logo Prisma\resref{res:prisma} manquant}
 \end{wrapfigure}
-Prisma est un ORM (Object-Relational Mapping) moderne, mais conçu de manière très différente de ce qui se fait actuellement dans l'industrie. En général, les ORM sont des bibliothèques qui font correspondre les tables de votre base de données aux classes du langage que vous utilisez pour écrire votre programme.
+Prisma\resref{res:prisma} est un ORM (Object-Relational Mapping) moderne, mais conçu de manière très différente de ce qui se fait actuellement dans l'industrie. En général, les ORM sont des bibliothèques qui font correspondre les tables de votre base de données aux classes du langage que vous utilisez pour écrire votre programme.
 
-Prisma, quant à lui, est une boîte à outils de base de données complète. En plus, Prisma ne souffre pas des nombreux problèmes qui sont communément associés aux ORM traditionnels. L'équipe estime en effet que l'approche des ORM traditionnels conduit à de nombreux problèmes causés par le décalage d'impédance objet-relationnel.
+Prisma\resref{res:prisma}, quant à lui, est une boîte à outils de base de données complète. En plus, Prisma\resref{res:prisma} ne souffre pas des nombreux problèmes qui sont communément associés aux ORM traditionnels. L'équipe estime en effet que l'approche des ORM traditionnels conduit à de nombreux problèmes causés par le décalage d'impédance objet-relationnel.
 
-C'est une situation que la conception de Prisma permet d'éviter. L'un des principaux différenciateurs entre Prisma et un ORM est son fichier de schéma centralisé et son langage de définition de schéma. Ce schéma définit à la fois les modèles de données de l'application et le schéma de la base de données.
+C'est une situation que la conception de Prisma\resref{res:prisma} permet d'éviter. L'un des principaux différenciateurs entre Prisma\resref{res:prisma} et un ORM est son fichier de schéma centralisé et son langage de définition de schéma. Ce schéma définit à la fois les modèles de données de l'application et le schéma de la base de données.
 
 \begin{figure}[H]
 \centering
@@ -285,7 +276,7 @@ C'est une situation que la conception de Prisma permet d'éviter. L'un des princ
 \label{fig:prisma-schema}
 \end{figure}
 
-Prisma nous permet de:
+Prisma\resref{res:prisma} nous permet de:
 
 \textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
 \begin{figure}[H]
@@ -403,21 +394,21 @@ export default function AuthForm({ mode = "login" }) {
 \section{Application mobile}
 \subsection{Technologies et outils utilises}
 
-\subsubsection{React Native}
+\subsubsection{React Native\resref{res:reactnative}}
 \begin{minipage}{0.7\textwidth}
-React Native est un framework de developpement d'applications mobiles cree par Facebook (Meta) qui permet de construire des applications natives pour Android et iOS a partir d'une base de code JavaScript/React commune. Il offre une approche "apprendre une fois, ecrire partout" pour le developpement mobile.
+React Native\resref{res:reactnative} est un framework de developpement d'applications mobiles cree par Facebook (Meta) qui permet de construire des applications natives pour Android et iOS a partir d'une base de code JavaScript/React commune. Il offre une approche "apprendre une fois, ecrire partout" pour le developpement mobile.
 
-Les principales caracteristiques de React Native qui ont guide notre choix pour VoiceNotion sont:
+Les principales caracteristiques de React Native\resref{res:reactnative} qui ont guide notre choix pour VoiceNotion sont:
 
 \begin{itemize}
-    \item \textbf{Composants natifs}: React Native compile le code JavaScript en composants natifs, offrant des performances proches des applications natives
+    \item \textbf{Composants natifs}: React Native\resref{res:reactnative} compile le code JavaScript en composants natifs, offrant des performances proches des applications natives
     \item \textbf{Partage de code}: Possibilite de partager une grande partie du code entre les plateformes iOS et Android
     \item \textbf{Hot Reloading}: Visualisation instantanee des modifications du code pendant le developpement
     \item \textbf{Communaute active}: Large ecosysteme de bibliotheques et support communautaire
     \item \textbf{Approche declarative}: Interface utilisateur construite de maniere declarative, similaire a React
 \end{itemize}
 
-React Native nous a permis de developper l'application mobile VoiceNotion pour iOS et Android a partir d'une seule base de code, tout en offrant une experience utilisateur native et performante sur chaque plateforme.
+React Native\resref{res:reactnative} nous a permis de developper l'application mobile VoiceNotion pour iOS et Android a partir d'une seule base de code, tout en offrant une experience utilisateur native et performante sur chaque plateforme.
 \end{minipage}%
 \hfill
 \begin{minipage}{0.25\textwidth}
@@ -425,7 +416,7 @@ React Native nous a permis de developper l'application mobile VoiceNotion pour i
 \includegraphics[width=0.9\textwidth]{assets/docs/logo_reactnative.png}
 \end{minipage}
 
-\begin{codebox}{Configuration du projet React Native}
+\begin{codebox}{Configuration du projet React Native\resref{res:reactnative}}
 \begin{lstlisting}
 // app.json
 {
@@ -466,21 +457,21 @@ React Native nous a permis de developper l'application mobile VoiceNotion pour i
 \end{lstlisting}
 \end{codebox}
 
-\subsubsection{Expo}
+\subsubsection{Expo\resref{res:expo}}
 \begin{minipage}{0.7\textwidth}
-Expo est une plateforme et un ensemble d'outils construits autour de React Native qui simplifient considerablement le developpement, le test et le deploiement d'applications mobiles. Il offre une approche "batteries included" pour React Native.
+Expo\resref{res:expo} est une plateforme et un ensemble d'outils construits autour de React Native\resref{res:reactnative} qui simplifient considerablement le developpement, le test et le deploiement d'applications mobiles. Il offre une approche "batteries included" pour React Native\resref{res:reactnative}.
 
-Les avantages d'Expo qui ont guide notre choix pour VoiceNotion sont:
+Les avantages d'Expo\resref{res:expo} qui ont guide notre choix pour VoiceNotion sont:
 
 \begin{itemize}
     \item \textbf{Configuration simplifiee}: Pas besoin de configurer manuellement le SDK natif d'Android ou iOS
     \item \textbf{Modules preintegres}: Acces a des APIs natives courantes (camera, geolocalisation, etc.) via des modules preconfiguress
-    \item \textbf{Expo Go}: Application de test qui permet de visualiser les changements en temps reel sur des appareils physiques
-    \item \textbf{EAS (Expo Application Services)}: Services de build, deploiement et mise a jour des applications
+    \item \textbf{Expo\resref{res:expo} Go}: Application de test qui permet de visualiser les changements en temps reel sur des appareils physiques
+    \item \textbf{EAS (Expo\resref{res:expo} Application Services)}: Services de build, deploiement et mise a jour des applications
     \item \textbf{Over-the-air updates}: Possibilite de deployer des mises a jour sans passer par les App Stores
 \end{itemize}
 
-Expo nous a permis d'accelerer considerablement le developpement de l'application mobile VoiceNotion, en simplifiant l'acces aux fonctionnalites natives et en offrant un flux de travail optimise du developpement au deploiement.
+Expo\resref{res:expo} nous a permis d'accelerer considerablement le developpement de l'application mobile VoiceNotion, en simplifiant l'acces aux fonctionnalites natives et en offrant un flux de travail optimise du developpement au deploiement.
 \end{minipage}%
 \hfill
 \begin{minipage}{0.25\textwidth}
@@ -620,11 +611,11 @@ Notre strategie de test pour VoiceNotion comprend plusieurs niveaux:
 
 \subsection{Outils de test}
 \begin{itemize}
-    \item \textbf{Jest}: Framework de test pour les tests unitaires et d'integration
-    \item \textbf{React Testing Library}: Bibliotheque pour tester les composants React
-    \item \textbf{Cypress}: Outil pour les tests end-to-end de l'application web
-    \item \textbf{Detox}: Framework pour les tests end-to-end de l'application mobile
-    \item \textbf{Lighthouse}: Outil pour evaluer les performances et l'accessibilite
+    \item \textbf{Jest\resref{res:jest}}: Framework de test pour les tests unitaires et d'integration
+    \item \textbf{React Testing Library\resref{res:reacttestinglibrary}}: Bibliotheque pour tester les composants React
+    \item \textbf{Cypress\resref{res:cypress}}: Outil pour les tests end-to-end de l'application web
+    \item \textbf{Detox\resref{res:detox}}: Framework pour les tests end-to-end de l'application mobile
+    \item \textbf{Lighthouse\resref{res:lighthouse}}: Outil pour evaluer les performances et l'accessibilite
 \end{itemize}
 
 \section{Deploiement et integration continue}
@@ -632,7 +623,7 @@ Notre strategie de test pour VoiceNotion comprend plusieurs niveaux:
 Nous avons mis en place un pipeline d'integration continue et de deploiement continu (CI/CD) pour automatiser le processus de build, test et deploiement:
 
 \begin{itemize}
-    \item \textbf{GitHub Actions}: Automatisation des workflows de CI/CD
+    \item \textbf{GitHub Actions\resref{res:githubactions}}: Automatisation des workflows de CI/CD
     \item \textbf{ESLint et Prettier}: Verification de la qualite du code
     \item \textbf{Tests automatises}: Execution des tests a chaque pull request
     \item \textbf{Preview Deployments}: Deploiement de versions de previsualisation pour chaque branche
@@ -646,51 +637,33 @@ Nous avons mis en place un pipeline d'integration continue et de deploiement con
 \end{itemize}
 
 \subsection{Plateformes de deploiement}
-\subsubsection{Digital Ocean}
+
+
+% --- Deployment ---
+\subsubsection{Déploiement Web et Mobile}
+Pour assurer une mise en ligne simple et fiable, nous avons opté pour deux solutions de déploiement complémentaires :
+
 \begin{minipage}{0.7\textwidth}
-Digital Ocean est une solution de service en cloud populaire, dotee d'une infrastructure robuste et offrant de multiples services.
-
-Il est principalement utilise pour l'hebergement d'applications et de sites web et est prefere par les utilisateurs en raison de sa facilite d'utilisation. Les centres de donnees Digital Ocean offrent un haut niveau de securite pour les applications.
-
-Les serveurs prives virtuels ou VPS offerts par Digital Ocean aux utilisateurs sont connus sous le nom de Droplets. Les utilisateurs de la plateforme peuvent gerer leurs applications par le biais d'une interface utilisateur Web ou d'une interface en ligne de commande (CLI).
-
-La plateforme IaaS de Digital Ocean est un choix populaire pour de nombreuses grandes entreprises clientes dans le monde entier en raison de sa fiabilite. Elle permet aux utilisateurs de choisir des parametres tels que les centres de donnees pour les applications, la taille des droplets et la region geographique.
-
-Pour VoiceNotion, nous avons utilise Digital Ocean pour:
-\begin{itemize}
-    \item Heberger notre base de donnees PostgreSQL de sauvegarde
-    \item Gerer des services auxiliaires comme Redis pour la mise en cache
-    \item Executer des taches de traitement en arriere-plan
-\end{itemize}
+\textbf{Netlify\resref{res:netlify}} : le frontend web (Next.js\resref{res:nextjs}) est automatiquement buildé et publié sur Netlify\resref{res:netlify} à chaque push dans la branche \texttt{main}. Netlify\resref{res:netlify} prend en charge le CDN, le SSL/TLS et le déploiement progressif (rollback en un clic). Des variables d’environnement sécurisées y sont définies pour la connexion à Supabase\resref{res:supabase}.
 \end{minipage}%
 \hfill
 \begin{minipage}{0.25\textwidth}
 \centering
-\textit{Logo DigitalOcean manquant}
+\includegraphics[width=0.9\textwidth]{assets/docs/logo_netlify.png}
 \end{minipage}
 
-\subsubsection{Nginx}
+\vspace{0.5cm}
+
 \begin{minipage}{0.7\textwidth}
-Nginx, prononce comme "engine-ex", est un serveur web open-source qui, depuis son succes initial en tant que serveur web, est maintenant aussi utilise comme reverse proxy, cache HTTP, et load balancer.
-
-Nginx a ete cree a l'origine par Igor Sysoev, avec sa premiere sortie publique en octobre 2004. Igor a d'abord concu le logiciel comme une reponse au probleme du C10k, qui est un probleme de performance lie a la gestion de 10.000 connexions simultanees.
-
-Pour VoiceNotion, nous utilisons Nginx pour:
-\begin{itemize}
-    \item Servir de reverse proxy pour notre application
-    \item Gerer le load balancing entre les instances de l'application
-    \item Configurer le SSL/TLS pour la securite des communications
-    \item Optimiser la diffusion des assets statiques
-    \item Mettre en place des regles de cache pour ameliorer les performances
-\end{itemize}
-
-Nginx nous a permis d'ameliorer considerablement les performances et la securite de notre application, tout en offrant une flexibilite importante pour la configuration de notre infrastructure.
+\textbf{Expo\resref{res:expo}} : l’application mobile React Native\resref{res:reactnative} est distribuée via la plateforme Expo\resref{res:expo}. Grâce à EAS~Build nous générons des APK/IPA signés et, via EAS~Update, nous poussons des OTA updates sans passer par les stores. Les testeurs utilisent Expo\resref{res:expo}~Go pour les versions de pré-production.
 \end{minipage}%
 \hfill
 \begin{minipage}{0.25\textwidth}
 \centering
-\includegraphics[width=0.9\textwidth]{assets/docs/nginx.png}
+\includegraphics[width=0.9\textwidth]{assets/docs/logo_expo.png}
 \end{minipage}
+
+Cette combinaison nous permet un cycle CI/CD unifié : GitHub Actions\resref{res:githubactions} déclenche la génération Netlify\resref{res:netlify} et les builds Expo\resref{res:expo} EAS, garantissant que chaque modification validée est rapidement disponible sur le web et sur mobile.
 
 \section{Securite et protection des donnees}
 \subsection{Authentification et autorisation}
@@ -729,15 +702,106 @@ Durant le developpement de VoiceNotion, nous avons rencontre plusieurs defis tec
 \subsection{Solutions implementees}
 \begin{itemize}
     \item \textbf{Filtrage audio}: Algorithmes de reduction du bruit pour ameliorer la reconnaissance vocale
-    \item \textbf{Systeme de replication}: Base sur CRDT (Conflict-free Replicated Data Types) pour la synchronisation
+    \item \textbf{Systeme de replication}: Base sur CRDT (Yjs\resref{res:crdt}) pour la synchronisation
     \item \textbf{Virtualisation}: Rendu optimise des longs documents pour maintenir la performance
     \item \textbf{Queue de synchronisation}: Pour gerer les modifications hors ligne et les synchroniser lors de la reconnexion
 \end{itemize}
 
+\subsection{Interface de l'Application Web}
+Cette section présente les différentes interfaces de l'application web VoiceNotion, illustrant le parcours de l'utilisateur, de l'authentification à la gestion des notes.
+
+\subsubsection{Authentification}
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/login-page.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/singup.png}
+    \caption{Pages de connexion et d'inscription.}
+    \label{fig:web-auth}
+\end{figure}
+
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/resend-pass.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/resend-succsus.png}
+    \caption{Processus de réinitialisation du mot de passe.}
+    \label{fig:web-reset-pass}
+\end{figure}
+
+\subsubsection{Tableau de Bord et Paramètres}
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/docs/web/dashboard-page.png}
+    \caption{Vue principale du tableau de bord de l'utilisateur.}
+    \label{fig:web-dashboard}
+\end{figure}
+
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/dashboard-appearence-section.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/dashboard-page-security-section.png}
+    \caption{Sections des paramètres : Apparence et Sécurité.}
+    \label{fig:web-settings}
+\end{figure}
+
+\subsubsection{Gestion des Notes}
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/note-homepage.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/note-page-dark.png}
+    \caption{Page d'accueil des notes et éditeur de notes en mode sombre.}
+    \label{fig:web-notes}
+\end{figure}
+
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/on-record.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/sidebar-search.png}
+    \caption{Indicateur d'enregistrement et recherche dans la barre latérale.}
+    \label{fig:web-record-search}
+\end{figure}
+
+\subsubsection{Publication et Partage}
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/publish-seciton.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{assets/docs/web/unpublish.png}
+    \caption{Options de publication et d'annulation de la publication d'une note.}
+    \label{fig:web-publish}
+\end{figure}
+
+\noindent
+\textit{La figure suivante illustre un aspect clé de l'architecture ou de l'implémentation technique du système.}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{assets/docs/web/dashboard-public-page-dark.png}
+    \caption{Exemple d'une note publiée accessible publiquement.}
+    \label{fig:web-public-note}
+\end{figure}
+
 \section{Conclusion}
 L'implementation de VoiceNotion a necessite l'integration de nombreuses technologies modernes et la resolution de defis techniques complexes. L'architecture choisie nous a permis de creer une application performante, securisee et evolutive, disponible sur le web et sur mobile.
 
-La combinaison de React, Next.js, React Native et Supabase nous a fourni une base solide pour construire notre solution, tandis que l'integration de l'API Gemini a rendu possible la fonctionnalite centrale de reconnaissance vocale.
+La combinaison de React, Next.js\resref{res:nextjs}, React Native\resref{res:reactnative} et Supabase\resref{res:supabase} nous a fourni une base solide pour construire notre solution, tandis que l'integration de l'API Gemini a rendu possible la fonctionnalite centrale de reconnaissance vocale.
 
 Les prochaines etapes de developpement incluront l'amelioration continue de la precision de la reconnaissance vocale, l'ajout de nouvelles fonctionnalites collaboratives, et l'optimisation des performances sur tous les appareils. 
 
